--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,8 @@
 		"wordpress-install-dir": "tests/wordpress"
 	},
 	"require": {
-		"php": ">= 7.4.0"
+		"php": ">= 7.4.0",
+		"johnbillion/args": "^0.9.0"
 	},
 	"require-dev": {
 		"automattic/phpcs-neutron-standard": "1.7.0",
