Shorten paths in PHPCS output.

--- a/composer.json
+++ b/composer.json
@@ -47,7 +47,7 @@
 			"@php -r \"! file_exists( 'tests/.env' ) && copy( 'tests/.env.dist', 'tests/.env' );\""
 		],
 		"test:cs": [
-			"phpcs -nps --colors --report-code --report-summary --report-width=80 --cache=tests/cache/phpcs ."
+			"phpcs -nps --colors --report-code --report-summary --report-width=80 --cache=tests/cache/phpcs --basepath='./' ."
 		],
 		"test:analyze": [
 			"phpstan analyze"
