--- a/composer.json
+++ b/composer.json
@@ -34,6 +34,7 @@
 		"lucatume/wp-browser": "^3.0",
 		"phpcompatibility/phpcompatibility-wp": "^2",
 		"phpstan/phpstan": "^1.0",
+		"phpstan/phpstan-phpunit": "^1.0",
 		"phpunit/phpunit": "^9",
 		"roots/wordpress": "^5.8.0",
 		"szepeviktor/phpstan-wordpress": "^1.0",
