--- a/phpstan.neon.dist
+++ b/phpstan.neon.dist
@@ -1,11 +1,13 @@
 includes:
 	- vendor/szepeviktor/phpstan-wordpress/extension.neon
+	- vendor/phpstan/phpstan-phpunit/extension.neon
 parameters:
 	level: 8
 	tmpDir: tests/cache
 	paths:
 		- functions.php
 		- src/
+		- tests/integration
 	ignoreErrors:
 		# Uses func_get_args()
 		- '#^Function apply_filters invoked with [34567] parameters, 2 required\.$#'
