--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,13 +12,13 @@ jobs:
   build:
     strategy:
       matrix:
-        php: ['7.4']
-        wp: ['5.8','5.6']
-        include:
+        php: [ '7.4', '8.0', '8.1' ]
+        wp: [ '5.9','5.8','5.6' ]
+        exclude:
           - php: '8.0'
-            wp: '5.8'
+            wp: '5.6'
           - php: '8.1'
-            wp: '5.8'
+            wp: '5.6'
       fail-fast: false
     name: WP ${{ matrix.wp }} / PHP ${{ matrix.php }}
     runs-on: ubuntu-18.04
