Run the tests on WP 6.0.

--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,8 @@
 		"phpstan/phpstan": "^1.0",
 		"phpstan/phpstan-phpunit": "^1.0",
 		"phpunit/phpunit": "^9",
-		"roots/wordpress": "^5.8.0",
+		"roots/wordpress-core-installer": "^1.0.0",
+		"roots/wordpress-full": "^6.0.0",
 		"szepeviktor/phpstan-wordpress": "^1.0",
 		"vlucas/phpdotenv": "^3",
 		"wp-cli/core-command": "^2",
