--- a/.github/workflows/test-nightly.yml
+++ b/.github/workflows/test-nightly.yml
@@ -27,8 +27,7 @@ jobs:
     - name: Install dependencies
       run: |
         sudo systemctl start mysql.service
-        composer install --prefer-dist
-        composer require --dev --update-with-dependencies --prefer-dist roots/wordpress="dev-nightly"
+        composer require --dev --update-with-dependencies --prefer-dist roots/wordpress-full="dev-nightly"
         mysqladmin -uroot -proot create wordpress_test
 
     - name: Run the tests
