--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,8 +12,8 @@ jobs:
   build:
     strategy:
       matrix:
-        php: [ '7.4', '8.0', '8.1' ]
-        wp: [ '5.9','5.8','5.6' ]
+        php: ['8.1','8.0','7.4']
+        wp: ['6.0','5.9','5.6']
         exclude:
           - php: '8.0'
             wp: '5.6'
@@ -63,8 +63,7 @@ jobs:
     - name: Install dependencies
       run: |
         sudo systemctl start mysql.service
-        composer install --prefer-dist
-        composer require --dev --update-with-dependencies --prefer-dist roots/wordpress="~${{ matrix.wp }}.0"
+        composer require --dev --update-with-dependencies --prefer-dist roots/wordpress-full="~${{ matrix.wp }}.0"
         mysqladmin -uroot -proot create wordpress_test
 
     - name: Run the integration tests
