--- a/composer.json
+++ b/composer.json
@@ -34,7 +34,7 @@
 		"phpstan/phpstan-phpunit": "^1.0",
 		"phpunit/phpunit": "^9",
 		"roots/wordpress-core-installer": "^1.0.0",
-		"roots/wordpress-full": "^6.0.0",
+		"roots/wordpress-full": "~6.1.0",
 		"szepeviktor/phpstan-wordpress": "1.1.6",
 		"vlucas/phpdotenv": "^3",
 		"wp-cli/core-command": "^2",
