--- a/.github/workflows/test-nightly.yml
+++ b/.github/workflows/test-nightly.yml
@@ -29,7 +29,7 @@ jobs:
     - name: Install dependencies
       run: |
         sudo systemctl start mysql.service
-        composer require --dev --update-with-dependencies --prefer-dist roots/wordpress-full="dev-nightly"
+        composer require --dev --update-with-dependencies --prefer-dist roots/wordpress-full="dev-main"
         mysqladmin -uroot -proot create wordpress_test
 
     - name: Run the tests
