--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -75,4 +75,4 @@ jobs:
       if: matrix.php == '7.4'
       run: |
         composer test:cs
-        composer test:analyze
+        composer test:analyze --error-format=github
