--- a/.github/workflows/test-nightly.yml
+++ b/.github/workflows/test-nightly.yml
@@ -11,7 +11,11 @@ jobs:
   build:
     strategy:
       matrix:
-        php: ['8.2','8.1','8.0','7.4']
+        php:
+          - '8.2'
+          - '8.1'
+          - '8.0'
+          - '7.4'
       fail-fast: false
     name: WP nightly / PHP ${{ matrix.php }}
     runs-on: ubuntu-latest
