--- a/codeception.dist.yml
+++ b/codeception.dist.yml
@@ -5,8 +5,5 @@ paths:
   support: tests/_support
   envs: tests/_envs
 actor_suffix: Tester
-extensions:
-  enabled:
-    - Codeception\Extension\RunFailed
 params:
-  - tests/.env
+  - env
