--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,6 @@
 {
 	"name": "johnbillion/extended-cpts",
 	"description": "A library which provides extended functionality to WordPress custom post types and taxonomies.",
-	"homepage": "https://github.com/johnbillion/extended-cpts/",
 	"license": "GPL-2.0-or-later",
 	"authors": [
 		{
@@ -9,17 +8,7 @@
 			"homepage": "https://johnblackbourn.com/"
 		}
 	],
-	"config": {
-		"sort-packages": true,
-		"preferred-install": "dist",
-		"allow-plugins": {
-			"dealerdirect/phpcodesniffer-composer-installer": true,
-			"roots/wordpress-core-installer": true
-		}
-	},
-	"extra": {
-		"wordpress-install-dir": "tests/wordpress"
-	},
+	"homepage": "https://github.com/johnbillion/extended-cpts/",
 	"require": {
 		"php": ">= 7.4.0",
 		"johnbillion/args": "^1.4.1"
@@ -27,38 +16,17 @@
 	"require-dev": {
 		"automattic/phpcs-neutron-standard": "1.7.0",
 		"dealerdirect/phpcodesniffer-composer-installer": "^0.7",
+		"ergebnis/composer-normalize": "^2",
 		"johnbillion/falsey-assertequals-detector": "*",
-		"lucatume/wp-browser": "^3.0",
+		"johnbillion/plugin-infrastructure": "dev-trunk",
+		"lucatume/wp-browser": "^3.0.21",
 		"phpcompatibility/phpcompatibility-wp": "^2",
 		"phpstan/phpstan": "^1.0",
 		"phpstan/phpstan-phpunit": "^1.0",
-		"phpunit/phpunit": "^9",
 		"roots/wordpress-core-installer": "^1.0.0",
-		"roots/wordpress-full": "~6.1.0",
+		"roots/wordpress-full": "*",
 		"szepeviktor/phpstan-wordpress": "1.1.6",
-		"vlucas/phpdotenv": "^3",
-		"wp-cli/core-command": "^2",
-		"wp-cli/db-command": "^2",
 		"wp-coding-standards/wpcs": "2.3.0"
-	},
-	"scripts": {
-		"post-update-cmd": [
-			"@php -r \"! file_exists( 'tests/.env' ) && copy( 'tests/.env.dist', 'tests/.env' );\""
-		],
-		"test:cs": [
-			"phpcs -nps --colors --report-code --report-summary --report-width=80 --cache=tests/cache/phpcs --basepath='./' ."
-		],
-		"test:analyze": [
-			"phpstan analyze --memory-limit=1024M"
-		],
-		"test:integration": [
-			"codecept run integration"
-		],
-		"test": [
-			"@test:cs",
-			"@test:analyze",
-			"@test:integration"
-		]
 	},
 	"autoload": {
 		"psr-4": {
@@ -69,8 +37,44 @@
 			"functions.php"
 		]
 	},
-	"suggest": {
-		"seravo/wp-custom-bulk-actions": "Custom Bulk Actions",
-		"wpackagist-plugin/rewrite-testing": "Rewrite Rule Testing"
+	"config": {
+		"allow-plugins": {
+			"dealerdirect/phpcodesniffer-composer-installer": true,
+			"ergebnis/composer-normalize": true,
+			"roots/wordpress-core-installer": true
+		},
+		"preferred-install": "dist",
+		"sort-packages": true
+	},
+	"extra": {
+		"wordpress-install-dir": "vendor/wordpress/wordpress"
+	},
+	"scripts": {
+		"test": [
+			"@composer validate --strict --no-check-lock",
+			"@composer normalize --dry-run",
+			"@test:phpstan",
+			"@test:phpcs",
+			"@test:integration"
+		],
+		"test:destroy": [
+			"COMPOSE_PROJECT_NAME=extended-cpts docker compose down --volumes --remove-orphans"
+		],
+		"test:integration": [
+			"integration-tests"
+		],
+		"test:phpcs": [
+			"phpcs -nps --colors --report-code --report-summary --report-width=80 --cache=tests/cache/phpcs.json --basepath='./' ."
+		],
+		"test:phpstan": [
+			"codecept build",
+			"phpstan analyze --memory-limit=1024M"
+		],
+		"test:start": [
+			"COMPOSE_PROJECT_NAME=extended-cpts docker compose up -d"
+		],
+		"test:stop": [
+			"COMPOSE_PROJECT_NAME=extended-cpts docker compose down"
+		]
 	}
 }
