--- a/phpcs.xml.dist
+++ b/phpcs.xml.dist
@@ -1,5 +1,10 @@
 <?xml version="1.0"?>
 <ruleset name="Extended CPTs">
+	<!--
+	Prevent deprecated errors caused by WordPress Coding Standards not supporting PHP 8.0+.
+	See https://github.com/WordPress/WordPress-Coding-Standards/issues/2035
+	-->
+	<ini name="error_reporting" value="E_ALL &#38; ~E_DEPRECATED" />
 
 	<config name="testVersion" value="7.4-"/>
 	<arg name="extensions" value="php"/>
