--- a/.gitattributes
+++ b/.gitattributes
@@ -10,5 +10,6 @@
 /.gitignore export-ignore
 /codeception.dist.yml export-ignore
 /CONTRIBUTING.md export-ignore
+/docker-compose.yml export-ignore
 /phpcs.xml.dist export-ignore
 /phpstan.neon.dist export-ignore
